wave_fixes-01: fixed headers and contrast errors (#16)

--- a/cs464-group-project/src/style/Team.css
+++ b/cs464-group-project/src/style/Team.css
@@ -217,8 +217,10 @@ p {
 
 .draw-color {
   color: black;
+  font-weight: bold;
 }
 
 .loss-color {
-  color: red;
+  color: rgb(170, 3, 3);
+  font-weight: bold;
 }
